experimental/ir/testdata/syntax/proto2_edition.proto.stderr.txt
error: proto2 use the `syntax` keyword
  --> testdata/syntax/proto2_edition.proto:16:1
   |
16 | edition = proto2;
   | ^^^^^^^
  help: replace with `syntax`
   |
16 | - edition = proto2;
16 | + syntax = proto2;
   |
   = help: proto2 is technically an edition, but cannot use `edition`

error: the value of a `edition` declaration must be a string literal
  --> testdata/syntax/proto2_edition.proto:16:11
   |
16 | edition = proto2;
   |           ^^^^^^
  help: add quotes to make this a string literal
   |
16 | edition = "proto2";
   |           +      +

encountered 2 errors
